crates/solidity-v2/testing/snapshots/diagnostics_output/structure/invalid_using_directive_container/file_level/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: This syntax was introduced in version '0.8.13'.
   ╭─[input.sol:6:1]
   │
 6 │ using L for uint256;
   │ ──────────┬─────────  
   │           ╰─────────── Error occurred here.
───╯
